--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="title_activity_mapactivity">mapactivity</string>
     <string name="title_activity_update">Update</string>
     <string name="title_activity_delete">Delete</string>
+    <string name="title_activity_maps">Maps</string>
 </resources>
